# blockchain

./: ahmiyat.db  chain.txt  package-lock.json  package.json
blockchain_core/: CMakeCache.txt  CMakeLists.txt  Makefile  ahmiyat.db  ahmiyat_blockchain  base58.cpp  base58.h  blockchain.cpp  blockchain.h  cmake_install.cmake  ecdsa_utils.cpp  ecdsa_utils.h  main.cpp  sqlite3.h  storage.cpp  storage.h
client/src/: App.tsx  index.css
client/src/components/: blockchain-explorer.tsx  create-post-modal.tsx  navbar.tsx  post-card.tsx  sidebar-left.tsx  sidebar-right.tsx
client/src/hooks/: useAuth.ts
client/src/pages/: home.tsx  landing.tsx
migrations/: 0000_lethal_manta.sql  0001_peaceful_randall.sql
migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
server/: blockchain.ts  db.ts  index.ts  persistentLogger.ts  postService.ts  rateLimiters.ts  replitAuth.ts  routes.ts  s3Upload.ts  statsService.ts  storage.ts  uploadUtils.ts
shared/: schema.ts
tests/: jest.config.js  package-lock.json  package.json  postService.test.ts  tsconfig.json
webapp/: ahmiyat.db  package-lock.json  package.json
webapp/.next/: trace
webapp/.next/cache/: config.json
webapp/app/: page.tsx
webapp/app/explorer/: page.tsx
webapp/app/feed/: page.tsx
webapp/app/login/: page.tsx
webapp/app/register/: page.tsx
webapp/app/upload/: page.tsx
webapp/app/wallet/: page.tsx
webapp/lib/: db.ts
webapp/pages/api/: blockchain.ts  explorer.ts  feed.ts  login.ts  register.ts  transaction.ts  upload-blockchain.ts  upload.ts  wallet.ts
webapp/scripts/: init-db.ts
